# ZACH-Main-Website-Django

./: .env.example  .gitignore  Passengerfile.json  README.md  db.sqlite3  manage.py  passenger_wsgi.py  pyproject.toml  requirements.txt
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
staticfiles/: staticfiles.json
staticfiles/css/: custom.css  path_to.css
staticfiles/js/: project.32a26bebd90e.js
zachmain/careers/: admin.py  apps.py  models.py  urls.py  views.py
zachmain/careers/migrations/: 0001_initial.py
zachmain/contrib/sites/: __init__.py
zachmain/media/careers/: one_stop_centre_administrator_umguza.docx
zachmain/membership/: admin.py  apps.py  models.py  urls.py  views.py
zachmain/membership/migrations/: 0001_initial.py  0002_member_website.py
zachmain/news/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
zachmain/news/migrations/: 0001_initial.py  0002_newsletter.py
zachmain/partners/: admin.py  apps.py  models.py  urls.py  views.py
zachmain/partners/migrations/: 0001_initial.py
zachmain/programmes/: admin.py  apps.py  models.py  urls.py  views.py
zachmain/programmes/migrations/: 0001_initial.py  0002_alter_programme_description.py
zachmain/static/css/: custom.css  flipcard.css
zachmain/templates/: 403.html  404.html  500.html  base.html
zachmain/templates/account/: base_manage_password.html
zachmain/users/: adapters.py  apps.py  forms.py  models.py  views.py
zachmain/websiteapp/: admin.py  apps.py  models.py  urls.py  views.py
(+33 files in other folders)
