[dependency-groups]
dev = [
    "coverage==7.13.2",
    "django-coverage-plugin==3.2.0",
    "django-debug-toolbar==6.2.0",
    "django-extensions==4.1",
    "django-stubs[compatible-mypy]==5.2.9",
    "djlint==1.36.4",
    "factory-boy==3.3.2",
    "ipdb==0.13.13",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "pytest-sugar==1.1.1",
    "ruff==0.14.14",
    "sphinx==8.*",
    "sphinx-autobuild==2025.8.25",
    "werkzeug[watchdog]==3.1.5",
]


[project]
name = "zachmain"
version = "0.1.0"
description = "Website for the association"
readme = "README.md"

license = { text = "Not open source" }
authors = [
  { name = "Ronald Maravanyika", email = "maravanyikar@zach.org.zw" },
]
requires-python = "==3.11.14"
dependencies = [
    "argon2-cffi==25.1.0",
    "crispy-bootstrap5==2025.6",
    "django==5.2.10",
    "django-allauth[mfa]==65.14.0",
    "django-anymail==14.0",
    "django-crispy-forms==2.5",
    "django-ckeditor-5==0.2.18",
    "django-environ==0.12.0",
    "django-model-utils==5.0.0",
    "django-redis==6.0.0",
    "gunicorn==25.0.0",
    "hiredis==3.3.0",
    "pillow==12.1.0",
    "python-slugify==8.0.4",
    "redis==7.1.0",
    "whitenoise==6.11.0",
]

